--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
                         <span class="theme-icon">🕒</span>
                     </div>
                 </div>
+                <div class="settings-group theme-toggle-container">
+                    <label>Show Weather:</label>
+                    <div class="theme-toggle">
+                        <span class="theme-icon">🌤️</span>
+                        <label class="switch">
+                            <input type="checkbox" id="weather-toggle">
+                            <span class="slider round"></span>
+                        </label>
+                        <span class="theme-icon">🌡️</span>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button id="settings-save" class="settings-save-btn">Save Settings</button>
