--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Add Gotham font or closest alternative (Montserrat) -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Quill CSS for rich text editing -->
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
 <body>
     <!-- Header panel -->
@@ -71,7 +73,8 @@
                     <!-- Notes will be added here dynamically -->
                 </div>
                 <div class="note-input-container">
-                    <textarea class="note-input" id="note-input" placeholder="Type a note (supports Markdown)..."></textarea>
+                    <!-- Replace textarea with Quill editor -->
+                    <div id="quill-editor"></div>
                     <button class="note-send-btn" id="note-send">Send</button>
                 </div>
             </div>
@@ -172,11 +175,11 @@
         <div id="help-dialog-content"></div>
     </div>
 
-    <!-- Import marked.js for Markdown parsing -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
-
     <!-- Import luxon.js for better timezone handling -->
     <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
+    
+    <!-- Quill JS for rich text editing -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     
     <script src="script.js"></script>
 </body>
