Added coloured tabs with colour picker and simple palette

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="section" id="tasks-section">
             <div class="section-header">
-                <h2 class="section-title">Tasks</h2>
+                <h2 class="section-title">Tasksssss</h2>
                 <div class="section-controls">
                     <button class="refresh-button" id="refresh-tasks"><i class="fas fa-sync-alt"></i></button>
                 </div>
